bug 177 fixed: icon tools wrong position in Safari and Konqueror 	Needed a little trick to fix it. Put the trick in a fix-khtml.css 	Loading in header.tpl and protected from IE, Geko and Opera, 	just in case (couldn't foud a safari css-only filter wich validate)
bug fixed: issue in the FORM in remote_site.tpl which prevented
	HTML validation (still something to do with the TABLE).


git-svn-id: http://piwigo.org/svn/trunk@910 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/template/yoga/content.css
+++ b/template/yoga/content.css
@@ -120,9 +120,11 @@ BODY#theNotificationPage #content
 /* actions */
 ul.categoryActions {
   text-align: center;
-  margin: 1px 1px 0 0;
+  margin: 0 0 0 0;
+  width: auto;
   padding: 0;
   text-indent: 0;
+  list-style: none;
 }
 
 #content div.titrePage ul.categoryActions {
