--- a/template/yoga/default-colors.css
+++ b/template/yoga/default-colors.css
@@ -67,10 +67,6 @@ A.navThumb, A.navThumb:hover {
     background:#eeeeee;
 }
 
-#content H2 {
-    text-align: left;
-}
-
 #content H3 {
     text-align: center;
 }
